samples/_failures_safe/1761790772_86b87b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3641c5fe.c: In function ‘transform_bounds’:
./samples/SAFE/__tmp_3641c5fe.c:124:9: error: expected expression at end of input
  124 |         if (
      |         ^~
./samples/SAFE/__tmp_3641c5fe.c:124:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3641c5fe.c:124:9: error: expected declaration or statement at end of input
